--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -36,7 +36,7 @@
               </li>
               <!--  *ngIf="!isLoggedIn$ -->
               <li class="nav-item px-3" *ngIf="!(isLoggedIn$ | async)" >
-                <a  class="text-decoration-none text-danger nav-link"
+                <a  class="text-decoration-none  nav-link"
                 routerLink='/login'
                 >{{linksName.login}}</a>
               </li>
