--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,34 @@
-<p>footer works!</p>
+<div class="uk-section uk-section-secondary footer-section">
+  <div class="uk-container uk-text-right">
+    <div class="uk-grid-match uk-child-width-1-3@m" uk-grid>
+      <div>
+        <h3>معلومات التواصل </h3>
+        <ul class="uk-list uk-list-divider">
+          <li>رقم الهاتف : 00963988888</li>
+          <li>البريد الألكتروني : comy-name.@domain.com</li>
+          <li>فريق العمل :team developer name</li>
+        </ul>
+      </div>
+      <div>
+        <h3>روابط تهمك</h3>
+        <ul class="uk-list uk-list-primary  uk-align-right">
+          <li class="uk-margin-left"><a class="uk-link-toggle" >
+              <span class="uk-link-heading uk-text-large uk-text-primary">من نحن</span>
+            </a>
+          </li>
+          <li><a class="uk-text-large uk-text-primary" routerLink='/contact'>
+           تواصل معنا
+          </a>
+        </li>
+
+        </ul>
+      </div>
+      <div>
+        <p class="lead">
+      <i class="fa-copyright " aria-hidden=""></i> copyright Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla voluptatum facere voluptatem!
+        </p>
+      </div>
+    </div>
+    <a href="#" uk-totop uk-scroll class="uk-text-large uk-text-bolder uk-text-success">up</a>
+  </div>
+</div>
