--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -1,4 +1,47 @@
+<div class="container">
+  <div class="">
+    <div class=" ">
+      <div class="filter">
+        <!-- appearance="standard" -->
+        <mat-form-field class="filter d-flex" >
+          <mat-label class="label uk-text-info lead">البحث عن مستخدم</mat-label>
+          <input matInput (keyup)="applyFilter($event)" class="input-form py-2"
+           #input>
+        </mat-form-field>
+      </div>
+      <table mat-table [dataSource]="dataSource1" class="mat-elevation-z8"  matSort (matSortChange)="announceSortChange($event)">
 
-<div>
 
+        <ng-container matColumnDef="name" class="uk-text-center">
+          <th mat-header-cell *matHeaderCellDef
+          mat-sort-header sortActionDescription="Sort by name"
+          class="justify-content-center">الاسم</th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone">
+          <th mat-header-cell *matHeaderCellDef class="uk-text-center">الرقم</th>
+          <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+          <th mat-header-cell *matHeaderCellDef class="uk-text-center">الايميل</th>
+          <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef class="uk-text-center">تاريخ الميلاد</th>
+          <td mat-cell *matCellDef="let element"> {{element.dateOfBirth}} </td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
