--- a/src/app/components/users/users.component.scss
+++ b/src/app/components/users/users.component.scss
@@ -20,5 +20,5 @@ font-size: 25pxS;
 
 .mat-sort-header-container{
   display: flex;
-  justify-content:center !important
+  justify-content:center !important;
 }
